Add Claro site details and sample posts

--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "zh-TW"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Site Title"
+title                    : "Claro 的資料分析筆記"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Claro"
+description              : "專注於以結構化方式完成商業分析、行為資料整理、選舉資料庫與 OCR 停車影像辨識，提供可行且支援決策的成果。"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Claro"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "具有 10 年資料分析經驗，擅長以邏輯拆解需求、定義問題並交付可量化的價值。熟悉 Python、SQL 與資料視覺化，能將成果轉化為網站、Dashboard 或簡報。"
+  location         : "Taiwan"
   email            :
   links:
     - label: "Email"
